# Agentic-AI-Refinance-Tool

./: .gitignore  CLAUDE.md  Dockerfile  README.md  makefile  pyproject.toml
.streamlit/: config.toml
docs/: 2026-06-12-finalization-plan.md  generate_arch_diagram.py
docs/superpowers/plans/: 2026-06-07-local-cu-dual-source-market-rate.md
docs/superpowers/specs/: 2026-06-06-local-cu-dual-source-market-rate-design.md  2026-06-09-treasury-timing-signal-design.md
scripts/: test_api_server.py
src/api/: api_setup.py
src/core/: agents.py  db_logging.py  define_state_and_llm.py  tools.py  workflow.py
src/frontend/: Agentic_Refinance_Tool.py  RefiAI_Main_Page.py  auth.py  client.py  ui.py
src/frontend/pages/: 1_Agent_Workflow_Details.py  2_AWS_Architecture_Diagram.py  2_Architecture_Diagram.py  3_Project_Inspiration.py
src/prompts/: finalizer_prompt.txt
src/schedule/: lambda_function.py
tests/: test_finalizer_eval.py  test_tools.py  test_workflow.py
