[project]
name = "refinance-tool"
version = "0.1.0"
description = "Agentic AI tool that helps users determine if they should refinance their mortgage."
authors = [
    {name = "lukeschwenke"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tavily-python (>=0.7.12,<0.8.0)",
    "langchain-mcp-adapters (>=0.1.12,<0.2.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "pyppeteer (>=2.0.0,<3.0.0)",
    "boto3 (>=1.42.14,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "refinance_tool"
packages = [
    { include = "core", from = "src" }
]

[tool.pytest.ini_options]
# (optional) so tests can also import without installing
pythonpath = ["src"]
markers = [
    "integration: tests that hit live endpoints",
    "local_cu: live test for the local credit union rate fetch",
    "treasury: live test for the 10-year treasury yield fetch",
    "interest_rate: live test for the Tavily average interest rate",
    "rate_outlook: live test for the Tavily mortgage-rate outlook search",
    "calculation: offline unit/calculation tests",
]
[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
